# aguaixuangu

./: .env.example  .gitignore  A股AI选股工具.html  A股AI选股工具开发方案.docx  A股AI选股工具开发方案_V2.md  CNAME  MAKE_COM_CONFIG_EXAMPLE.js  MAKE_COM_FRONTEND_INTEGRATION.md  MAKE_COM_INTEGRATION_GUIDE.md  Makefile  Procfile  README.md  index.html  make_webhook_server.py  render.yaml  requirements-pipeline.txt  stock-ai-analyzer.js  stock-analyzer-demo.html
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  health.py  market.py  sectors.py  signals.py  stocks.py  trade_diagnostics.py
backend/app/core/: config.py
backend/app/models/: __init__.py  domain.py
backend/app/prompts/: market_sentiment_prompt.py  risk_analysis_prompt.py  trade_diagnostics_prompt.py
backend/app/schemas/: __init__.py  health.py  market.py  signals.py  stock.py  trade_diagnostics.py
backend/app/services/: __init__.py  ai_market_sentiment.py  ai_market_sentiment_cache.py  ai_risk.py  ai_risk_cache.py  gemini_client.py  market.py  mock_data.py  sectors.py  signals.py  snapshot_store.py  stocks.py  trade_diagnostics.py
backend/app/static/: app.js  index.html  styles.css
backend/tests/: test_api.py
data_pipeline/: __init__.py  ai_analysis_service.py  config.py  selection_engine.py
docs/: ai_execution_requirements_prompt.md  architecture.md  github_pages_supabase_make_runbook.md  github_pages_worker_runbook.md  make_com_workflow_guide.md  make_trade_diagnostics_runbook.md  trade_diagnostics_module.md
supabase/: schema.sql  (+4 more)
(+31 files in other folders)
